switch to latest release

--- a/.github/workflows/sign-and-notarize.yml
+++ b/.github/workflows/sign-and-notarize.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install SignPath MacOSCryptoTokenKit
         run: |
-          curl -o SignPathCryptoTokenKit.dmg https://download.signpath.io/cryptoproviders/macos-cryptotokenkit/2.0.0/SignPathCryptoTokenKit.dmg
+          curl -o SignPathCryptoTokenKit.dmg https://download.signpath.io/cryptoproviders/macos-cryptotokenkit/2-latest/SignPathCryptoTokenKit.dmg
           codesign -dv --verbose SignPathCryptoTokenKit.dmg
           hdiutil attach ./SignPathCryptoTokenKit.dmg -mountroot ./tools
 
